# Cloudwire

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  release.yml
awsflow/: __init__.py  cli.py
awsflow/app/: main.py  models.py
backend/app/: main.py  scanner.py
cloudwire/: __init__.py  cli.py
cloudwire/app/: __init__.py  aws_clients.py  errors.py  graph_store.py  hcl_parser.py  main.py  models.py  scan_jobs.py  scanner.py  terraform_parser.py
cloudwire/app/cost/: __init__.py  cache.py  ce_client.py  cost_mapper.py  enricher.py
cloudwire/app/routes/: scan.py  tags.py  terraform.py
cloudwire/app/scanners/: _utils.py
docs/: ARCHITECTURE.md  FEATURES.md  RELEASING.md  USAGE.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/graph/: GraphCanvas.jsx  GraphEdge.jsx  GraphLegend.jsx  GraphNode.jsx  Minimap.jsx
frontend/src/components/layout/: InspectorPanel.jsx  ServiceSidebar.jsx  TagFilterBar.jsx  TerraformDropZone.jsx  TerraformFilePanel.jsx  TopBar.jsx
frontend/src/hooks/: useClickOutside.js  useGraphPipeline.js  useGraphViewport.js  useScanPolling.js  useTagDiscovery.js  useTerraformUpload.js
frontend/src/lib/: api.js  awsRegions.js  graphTransforms.js  serviceVisuals.jsx
frontend/src/pages/: AwsFlowPage.jsx  CloudWirePage.jsx
frontend/src/styles/: graph.css
memory/: MEMORY.md
(+5 files in other folders)
